--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,5 +1,6 @@
 $light_gray: #777;
 $dark_gray: #444;
+$error_red: #f00;
 
 .code-top-bar {
   padding: 2vh 0;
@@ -48,4 +49,8 @@ $dark_gray: #444;
 
 .code-output {
   padding: 3px;
+}
+
+.runtime-error {
+  color: $error_red;
 }
