--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -31,6 +31,7 @@ $error_red: #f00;
     width: 100%;
     padding-top: 3px;
     padding-left: 50px;
+    padding-right: 0;
     border: none;
     outline: none;
     resize: none;
