--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,6 +1,7 @@
 $pale_gray: #f3f3f3;
 $light_gray: #777;
 $dark_gray: #444;
+$teko_blue: #c5e6fc;
 $error_red: #f00;
 $success_green: #070;
 
@@ -14,7 +15,7 @@ $success_green: #070;
   src: url("/static/font/OpenSans-VariableFont_wdth,wght.ttf") format("ttf");
 }
 
-h1, h2, h3, p {
+h1, h2, h3, p, a {
   font-family: "Open Sans", sans-serif;
 }
 
@@ -94,4 +95,35 @@ h1, h2, h3, p {
   right: 20px;
   top: 10px;
   color: $success_green;
+}
+
+.lesson {
+  height: 100vh;
+}
+
+.lesson-panel {
+  background-color: $teko_blue;
+}
+
+.lesson-list-item {
+  padding-left: 20px;
+  position: relative;
+
+  a {
+    color: $dark_gray;
+
+    &:hover {
+      text-decoration: none;
+      font-weight: 600;
+    }
+  }
+
+  svg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: $dark_gray;
+    font-size: 24px;
+    cursor: pointer;
+  }
 }
