--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -10,12 +10,18 @@ $keyword_orange: #b74;
 
 @font-face {
   font-family: "Source Code Pro";
-  src: url("/static/font/SourceCodePro-VariableFont_wght.ttf") format("ttf");
+  src: url("/static/font/SourceCodePro-VariableFont_wght.ttf") format("ttf"),
+       url("/static/font/SourceCodePro-VariableFont_wght.svg") format("svg"),
+       url("/static/font/SourceCodePro-VariableFont_wght.woff") format("woff"),
+       url("/static/font/SourceCodePro-VariableFont_wght.otf") format("otf");
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("/static/font/OpenSans-VariableFont_wdth,wght.ttf") format("ttf");
+  src: url("/static/font/OpenSans-VariableFont_wdth,wght.ttf") format("ttf"),
+       url("/static/font/OpenSans-VariableFont_wdth,wght.svg") format("svg"),
+       url("/static/font/OpenSans-VariableFont_wdth,wght.woff") format("woff"),
+       url("/static/font/OpenSans-VariableFont_wdth,wght.otf") format("otf");
 }
 
 h1, h2, h3, p, a, .lesson-number {
@@ -112,6 +118,7 @@ a {
   overflow-y: scroll;
   font-size: 14px;
   background-color: $pale_gray;
+  font-weight: 600;
 
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -138,12 +145,12 @@ a {
     position: absolute;
     top: 0;
     left: 0;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
   }
 
   .highlighted-code {
     color: $dark_gray;
-    overflow-wrap: break-word;
-    white-space: pre-wrap;
 
     .teko-comment {
       color: $light_gray;
@@ -162,6 +169,12 @@ a {
     z-index: 1;
     color: transparent;
     caret-color: $dark_gray;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
 
@@ -222,7 +235,6 @@ a {
       color: $dark_gray;
       padding-right: 25px;
       font-weight: 600;
-      letter-spacing: .2px;
     }
 
     .lesson-number {
