--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -42,13 +42,13 @@ a {
   height: 10vh;
   padding: 0;
 
-  .teko-home-link {
-    text-align: center;
-    height: 100%;
+  .logo-box {
+    padding: 0;
+    position: relative;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 0;
+    height: 100%;
+    flex-direction: row;
+    justify-content: left;
     background-color: white;
     color: $teko_dark_blue;
 
@@ -57,11 +57,24 @@ a {
       color: white;
     }
 
-    a {
-      color: inherit;
+    img {
+      height: 100%;
+    }
 
-      &:hover {
-        text-decoration: none;
+    .teko-home-link {
+      text-align: center;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-bottom: 0;
+
+      a {
+        color: inherit;
+
+        &:hover {
+          text-decoration: none;
+        }
       }
     }
   }
